2007-06-21  Hubert Figuiere  <hub@figuiere.net>

	* exempi/exempi.cpp (xmp_files_get_xmp): More 
	exception handling. Should be better for error
	management and resource tracking: was causing XMP to 
	leak because the exception was not caught.
