@@ -28,10 +28,10 @@ dnl  REVISION is set to 0, otherwise REVISION is incremented.
 dnl ---------------------------------------------------------------------------
 dnl 1.99.0 is the revision 2 0 0
 dnl 1.99.1 is the revision 3 1 0
-dnl 1.99.2 is the revision 3 1 1
-AC_SUBST([EXEMPI_REVISION], [1])
-AC_SUBST([EXEMPI_AGE],      [1])
-AC_SUBST([EXEMPI_CURRENT],  [3])
+dnl 1.99.2 is the revision 4 2 0
+AC_SUBST([EXEMPI_REVISION], [0])
+AC_SUBST([EXEMPI_AGE],      [2])
+AC_SUBST([EXEMPI_CURRENT],  [4])
 AC_SUBST([EXEMPI_CURRENT_MIN],
          [`expr $EXEMPI_CURRENT - $EXEMPI_AGE`])
 AC_SUBST([EXEMPI_VERSION_INFO],
