@@ -1,3 +1,8 @@
+2007-06-23  Hubert Figuiere  <hub@figuiere.net>
+
+	* Added xmp_get_property_and_bits() and all the
+	option bits for it.
+
 2007-06-21  Hubert Figuiere  <hub@figuiere.net>
 
 	* exempi/exempi.cpp (xmp_files_get_xmp): More 
